--- a/and-bible/app/src/main/res/values/colors.xml
+++ b/and-bible/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<color name="bible_background_day">#ffffff</color>
+	<color name="bible_background_night">#000000</color>
+
 	<color name="window_separator_colour">#FF6B6B6B</color>
 	<color name="window_separator_drag_colour">#FF00FF00</color>
 
