Basic bookmark multi-selection; labels not working yet; no highlight in 2.3

--- a/and-bible/app/src/main/res/layout/bookmarks.xml
+++ b/and-bible/app/src/main/res/layout/bookmarks.xml
@@ -8,22 +8,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-   	<Spinner android:id="@+id/labelSpinner"
+    android:layout_height="fill_parent">
+   	<Spinner
+		android:id="@+id/labelSpinner"
    		android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
 	    android:padding="10dip"
-    />
-	<ListView android:id="@android:id/list" 
+		android:paddingBottom="20dip"/>
+	<ListView
+		android:id="@android:id/list"
 		android:layout_width="fill_parent" 
 		android:layout_height="fill_parent"
 		android:choiceMode="singleChoice"
-		android:visibility="visible"
-		/>
-	<TextView android:id="@android:id/empty"
+		android:visibility="visible"/>
+	<TextView
+		android:id="@android:id/empty"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:textStyle="bold"
+		android:textAppearance="?attr/textAppearanceListItem"
+		android:gravity="center_horizontal"
+		android:paddingTop="16dip"
 		android:text="@string/empty_list"/>
 </LinearLayout>
