--- a/and-bible/app/src/main/res/drawable/selectable.xml
+++ b/and-bible/app/src/main/res/drawable/selectable.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
 		<!-- State when a row is being pressed, but hasn't yet been activated (finger down) -->
-		<item android:drawable="@color/blue_grey_100" android:state_pressed="true" />
+		<item android:drawable="@color/list_item_pressed" android:state_pressed="true" />
 
 		<!-- Used when the view is "activated". -->
-		<item android:drawable="@color/blue_grey_300" android:state_activated="true" />
+		<item android:drawable="@color/list_item_activated" android:state_activated="true" />
 
 		<!-- Default, "just hangin' out" state. -->
 		<item android:drawable="@android:color/transparent" />
