--- a/and-bible/app/src/main/res/menu/bookmark_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/bookmark_context_menu.xml
@@ -8,9 +8,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<item android:id="@+id/assign_labels" 
-		  android:title="@string/assign_labels"/>
+		  android:title="@string/assign_labels"
+		  android:icon="@drawable/ic_label_24dp"/>
 
 	<item android:id="@+id/delete" 
-		  android:title="@string/delete"/>
+		  android:title="@string/delete"
+		  android:icon="@drawable/ic_delete_24dp"/>
+
 
 </menu>
