Initial documents action mode implementation

--- a/and-bible/app/src/main/res/menu/download_documents.xml
+++ b/and-bible/app/src/main/res/menu/download_documents.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- The main menu accessed via Menu key
+<!-- The menu displayed in the ActionBar for Download Documents
  
  @author Martin Denham [mjdenham at gmail dot com]
  @see gnu.lgpl.License for license details.<br>
