--- a/and-bible/app/src/main/res/menu/choose_document_menu.xml
+++ b/and-bible/app/src/main/res/menu/choose_document_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- The main menu accessed via Menu key
+<!-- The main menu displayed in the Action Bar on the Document selection screen
  
  @author Martin Denham [mjdenham at gmail dot com]
  @see gnu.lgpl.License for license details.<br>
