--- a/and-bible/app/src/main/res/layout/list_item_2_image.xml
+++ b/and-bible/app/src/main/res/layout/list_item_2_image.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:mode="twoLine"
->
+	android:background="@drawable/selectable">
     
     <ImageView android:id="@+id/icon"
 	    android:layout_width="wrap_content"
