Icons for documents action mode

--- a/and-bible/app/src/main/res/menu/document_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/document_context_menu.xml
@@ -5,16 +5,21 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+	  xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
 	<item android:id="@+id/about" 
-		  android:title="@string/about"/>
+		  android:title="@string/about"
+		  android:icon="@drawable/ic_info_24dp"
+		  appcompat:showAsAction="always"/>
 
 	<item android:id="@+id/delete" 
-		  android:title="@string/delete"/>
+		  android:title="@string/delete"
+		  android:icon="@drawable/ic_delete_24dp"/>
 
 	<item android:id="@+id/delete_index" 
-		  android:title="@string/delete_index"/>
+		  android:title="@string/delete_index"
+		  appcompat:showAsAction="never"/>
 
 
 </menu>
