--- a/and-bible/app/src/main/res/menu/bookmark_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/bookmark_context_menu.xml
@@ -5,11 +5,13 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+	  xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
 	<item android:id="@+id/assign_labels" 
 		  android:title="@string/assign_labels"
-		  android:icon="@drawable/ic_label_24dp"/>
+		  android:icon="@drawable/ic_label_24dp"
+		  appcompat:showAsAction="always"/>
 
 	<item android:id="@+id/delete" 
 		  android:title="@string/delete"
