--- a/and-bible/app/src/main/res/menu/bookmark_labels_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/bookmark_labels_context_menu.xml
@@ -5,10 +5,12 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+	  xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
 	<item android:id="@+id/delete" 
-		  android:title="@string/delete"/>
+		  android:title="@string/delete"
+		  android:icon="@drawable/ic_delete_24dp"/>
 	<item android:id="@+id/rename" 
 		  android:title="@string/rename"/>
 	
