--- a/and-bible/app/src/main/res/menu/download_documents_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/download_documents_context_menu.xml
@@ -5,9 +5,11 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+	  xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
 	<item android:id="@+id/about" 
-		  android:title="@string/about"/>
+		  android:title="@string/about"
+		  appcompat:showAsAction="always"/>
 
 </menu>
