--- a/and-bible/app/src/main/res/values/colors.xml
+++ b/and-bible/app/src/main/res/values/colors.xml
@@ -16,22 +16,19 @@
 	
 	<color name="actionbar_text">#ffffffff</color>
 
-	<color name="accent_day">@color/blue_grey_900</color>
-	<color name="accent_night">@color/blue_grey_300</color>
+	<color name="accent_day">@color/blue_900</color>
+	<color name="accent_night">@color/blue_300</color>
 
 	<color name="buttongrid_button_feedback_text">@color/grey_1000b</color>
 
-	<color name="list_item_pressed">@color/yellow_100</color>
-	<color name="list_item_activated">@color/yellow_300</color>
+	<color name="list_item_pressed">@color/blue_100</color>
+	<color name="list_item_activated">@color/blue_300</color>
 
 	<!-- see
 	colours: https://www.google.com/design/spec/style/color.html#color-color-palette
 	numbers: https://gist.github.com/cypressious/90355ac3e92c65908441 -->
 	<color name="indigo_500">#3f51b5</color>
 	<color name="indigo_700">#303f9f</color>
-
-	<color name="blue_700">#455ede</color>
-	<color name="blue_900">#2a36b1</color>
 
 	<color name="grey_500">#9e9e9e</color>
 	<color name="grey_600">#757575</color>
@@ -40,6 +37,21 @@
 	<color name="grey_900">#212121</color>
 	<color name="grey_1000b">#000000</color>
 	<color name="grey_1000w">#ffffff</color>
+
+	<color name="blue_50">#e7e9fd</color>
+	<color name="blue_100">#d0d9ff</color>
+	<color name="blue_200">#afbfff</color>
+	<color name="blue_300">#91a7ff</color>
+	<color name="blue_400">#738ffe</color>
+	<color name="blue_500">#5677fc</color>
+	<color name="blue_600">#4e6cef</color>
+	<color name="blue_700">#455ede</color>
+	<color name="blue_800">#3b50ce</color>
+	<color name="blue_900">#2a36b1</color>
+	<color name="blue_A100">#a6baff</color>
+	<color name="blue_A200">#6889ff</color>
+	<color name="blue_A400">#4d73ff</color>
+	<color name="blue_A700">#4d69ff</color>
 
 	<color name="blue_grey_50">#eceff1</color>
 	<color name="blue_grey_100">#cfd8dc</color>
