--- a/and-bible/app/src/main/res/layout/document_selection.xml
+++ b/and-bible/app/src/main/res/layout/document_selection.xml
@@ -13,7 +13,11 @@
     <LinearLayout android:orientation="horizontal" 
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content"
-    	android:padding="5dip">
+    	android:paddingTop="5dip"
+		android:paddingBottom="5dip"
+		android:paddingLeft="16dp"
+		android:paddingRight="16dp"
+		>
     	<Spinner android:id="@+id/languageSpinner"
     		android:layout_width="fill_parent"
 	    	android:layout_height="wrap_content"
