--- a/and-bible/app/src/main/res/layout/list_item_2_image.xml
+++ b/and-bible/app/src/main/res/layout/list_item_2_image.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:mode="twoLine"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
 	android:background="@drawable/selectable_background">
     
     <ImageView android:id="@+id/icon"
@@ -16,7 +18,7 @@
         android:layout_alignParentLeft="true"
 	    android:duplicateParentState="true" />
     
-    <TextView android:id="@android:id/text1"
+    <TextView android:id="@+id/text1"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
         android:layout_marginLeft="6dip"
@@ -25,12 +27,11 @@
 		android:textAppearance="?android:attr/textAppearanceLarge"
 	/>
 		
-	<TextView android:id="@android:id/text2"
+	<TextView android:id="@+id/text2"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@android:id/text1"
-        android:layout_alignLeft="@android:id/text1"
-		android:textAppearance="?android:attr/textAppearanceSmall"
-	/>
+		android:layout_below="@id/text1"
+        android:layout_alignLeft="@id/text1"
+        android:textAppearance="?android:textAppearanceSmall" />
 
 </net.bible.android.view.util.widget.TwoLineListItemWithImage>
