--- a/and-bible/app/src/main/res/menu/bookmark_labels_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/bookmark_labels_context_menu.xml
@@ -9,8 +9,7 @@
 	  xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
 	<item android:id="@+id/delete" 
-		  android:title="@string/delete"
-		  android:icon="@drawable/ic_delete_24dp"/>
+		  android:title="@string/delete"/>
 	<item android:id="@+id/rename" 
 		  android:title="@string/rename"/>
 	
