--- a/and-bible/app/src/main/res/menu/document_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/document_context_menu.xml
@@ -15,7 +15,8 @@
 
 	<item android:id="@+id/delete" 
 		  android:title="@string/delete"
-		  android:icon="@drawable/ic_delete_24dp"/>
+		  android:icon="@drawable/ic_delete_24dp"
+		  appcompat:showAsAction="always"/>
 
 	<item android:id="@+id/delete_index" 
 		  android:title="@string/delete_index"
