--- a/and-bible/app/src/main/res/menu/main.xml
+++ b/and-bible/app/src/main/res/menu/main.xml
@@ -19,7 +19,7 @@
     
 	<item android:id="@+id/searchButton"
 		  android:title="@string/search"
-		  android:icon="@android:drawable/ic_menu_search"
+		  android:icon="@drawable/ic_search_24dp"
 		  appcompat:showAsAction="ifRoom"/>
 
 	<item android:id="@+id/windowSubMenu"
