Show colors in manage bookmark labels

--- a/and-bible/app/src/main/res/values/colors.xml
+++ b/and-bible/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
 	<color name="list_item_pressed">@color/blue_100</color>
 	<color name="list_item_activated">@color/blue_300</color>
 
+	<color name="night_dialog_background">#303030</color>
 	<!-- see
 	colours: https://www.google.com/design/spec/style/color.html#color-color-palette
 	numbers: https://gist.github.com/cypressious/90355ac3e92c65908441 -->
