--- a/and-bible/app/src/main/res/layout/manage_labels_list_item.xml
+++ b/and-bible/app/src/main/res/layout/manage_labels_list_item.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="match_parent"
-			  android:layout_height="match_parent">
+			  android:layout_height="40dp"
+			  android:gravity="center_vertical">
 
 	<TextView
 		android:id="@+id/labelName"
 		android:layout_height="wrap_content"
 		android:layout_width="0dp"
 		android:layout_weight="1"
-		android:textStyle="bold" />
+		android:paddingLeft="18dp"
+		android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-	<ImageButton
+	<ImageView
 		android:id="@+id/editLabel"
 		android:text="@string/edit"
+		android:contentDescription="@string/edit"
 		android:src="@drawable/ic_pen_24dp"
-		android:layout_height="wrap_content"
+		android:layout_height="26dp"
+		android:layout_weight="0.25"
 		android:layout_width="0dp"
-		android:layout_weight="0.5" />
+		android:layout_marginRight="5dp"/>
 
-	<ImageButton
+	<ImageView
 		android:id="@+id/deleteLabel"
 		android:text="@string/delete"
+		android:contentDescription="@string/delete"
 		android:src="@drawable/ic_delete_24dp"
-		android:layout_height="wrap_content"
+		android:layout_height="25dp"
+		android:layout_weight="0.25"
 		android:layout_width="0dp"
-		android:layout_weight="0.5" />
+		android:layout_marginRight="5dp"/>
 
 </LinearLayout>
