--- a/and-bible/app/src/main/res/layout/manage_labels_list_item.xml
+++ b/and-bible/app/src/main/res/layout/manage_labels_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			  xmlns:app="http://schemas.android.com/apk/res-auto"
 			  android:layout_width="match_parent"
 			  android:layout_height="40dp"
 			  android:gravity="center_vertical">
@@ -16,7 +17,7 @@
 		android:id="@+id/editLabel"
 		android:text="@string/edit"
 		android:contentDescription="@string/edit"
-		android:src="@drawable/ic_pen_24dp"
+		app:srcCompat="@drawable/ic_pen_24dp"
 		android:layout_height="26dp"
 		android:layout_weight="0.25"
 		android:layout_width="0dp"
@@ -26,7 +27,7 @@
 		android:id="@+id/deleteLabel"
 		android:text="@string/delete"
 		android:contentDescription="@string/delete"
-		android:src="@drawable/ic_delete_24dp"
+		app:srcCompat="@drawable/ic_delete_24dp"
 		android:layout_height="25dp"
 		android:layout_weight="0.25"
 		android:layout_width="0dp"
