Re-add New Label while labelling bookmarks

--- a/and-bible/app/src/main/res/layout/bookmark_labels.xml
+++ b/and-bible/app/src/main/res/layout/bookmark_labels.xml
@@ -31,5 +31,12 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"/>
 
+		<Button android:id="@+id/newLabel"
+			android:text="@string/new_label"
+			android:layout_width="0dip"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:onClick="onNewLabel"/>
+
 	</LinearLayout>
 </RelativeLayout>	
