Fix to ensure bookmark style spinner shows values on Android 2.3

--- a/and-bible/app/src/main/res/layout/bookmark_label_edit.xml
+++ b/and-bible/app/src/main/res/layout/bookmark_label_edit.xml
@@ -3,14 +3,8 @@
 			  android:orientation="vertical"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent"
-			  android:background="?android:colorBackground">
-
-	<View android:id="@+id/titleDivider"
-		  android:layout_width="match_parent"
-		  android:layout_height="2dip"
-		  android:background="@color/blue_900"
-		  android:layout_marginLeft="20dp"
-		  android:layout_marginRight="20dp"/>
+			  android:background="?android:colorBackground"
+			  android:minHeight="@dimen/bookmark_label_style_dialog_min_height">
 
 	<LinearLayout android:orientation="vertical"
 				  android:layout_width="match_parent"
