Increase night blue accent opacity

--- a/and-bible/app/src/main/res/values/colors.xml
+++ b/and-bible/app/src/main/res/values/colors.xml
@@ -26,7 +26,7 @@
 	<color name="buttongrid_button_feedback_text">@color/grey_1000b</color>
 
 	<color name="list_item_pressed">@color/blue_100</color>
-	<color name="list_item_activated">@color/blue_300</color>
+	<color name="list_item_activated">@color/blue_300_35pcntOpacity</color>
 
 	<color name="night_dialog_background">#303030</color>
 	<!-- see
@@ -46,7 +46,8 @@
 	<color name="blue_50">#e7e9fd</color>
 	<color name="blue_100">#59d0d9ff</color>
 	<color name="blue_200">#afbfff</color>
-	<color name="blue_300">#5991a7ff</color>
+	<color name="blue_300">#91a7ff</color>
+	<color name="blue_300_35pcntOpacity">#5991a7ff</color>
 	<color name="blue_400">#738ffe</color>
 	<color name="blue_500">#5677fc</color>
 	<color name="blue_600">#4e6cef</color>
