--- a/and-bible/app/src/main/res/menu/bookmark_labels_actionbar_menu.xml
+++ b/and-bible/app/src/main/res/menu/bookmark_labels_actionbar_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Action bar menu for bookmark screen
+<!-- Action bar menu for bookmark labels screen
  
  @author Martin Denham [mjdenham at gmail dot com]
  @see gnu.lgpl.License for license details.<br>
@@ -10,9 +10,5 @@
 	<item android:id="@+id/manageLabels"
 		  android:title="@string/manage_labels"
 		  android:icon="@drawable/ic_label_multiple_24dp"
-		  appcompat:showAsAction="always"/>
-	<item android:id="@+id/sortByToggle"
-		  android:title="@string/sort_by_date"
-		  android:icon="@android:drawable/ic_menu_sort_by_size"
 		  appcompat:showAsAction="always"/>
 </menu>
