--- a/and-bible/app/src/main/res/layout/document_list_item.xml
+++ b/and-bible/app/src/main/res/layout/document_list_item.xml
@@ -16,7 +16,8 @@
 	    android:layout_gravity="center_vertical"
 	    android:layout_marginLeft="2dip"
         android:layout_alignParentLeft="true"
-	    android:duplicateParentState="true" />
+	    android:duplicateParentState="true"
+		android:layout_centerVertical="true"/>
     
     <TextView android:id="@+id/text1"
 		android:layout_width="match_parent"
