--- a/and-bible/app/src/main/res/layout/document_download_list_item.xml
+++ b/and-bible/app/src/main/res/layout/document_download_list_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<net.bible.android.view.util.widget.DocumentListItem xmlns:android="http://schemas.android.com/apk/res/android"
-													 android:paddingTop="2dip"
-													 android:paddingBottom="2dip"
-													 android:layout_width="match_parent"
-													 android:layout_height="wrap_content"
-													 android:minHeight="?android:attr/listPreferredItemHeight"
-													 android:mode="twoLine"
-													 android:paddingLeft="16dp"
-													 android:paddingRight="16dp"
-													 android:background="@drawable/selectable_background">
+<net.bible.android.view.activity.download.DocumentDownloadListItem xmlns:android="http://schemas.android.com/apk/res/android"
+																   android:paddingTop="2dip"
+																   android:paddingBottom="2dip"
+																   android:layout_width="match_parent"
+																   android:layout_height="wrap_content"
+																   android:minHeight="?android:attr/listPreferredItemHeight"
+																   android:mode="twoLine"
+																   android:paddingLeft="16dp"
+																   android:paddingRight="16dp"
+																   android:background="@drawable/selectable_background">
     
     <ImageView android:id="@+id/icon"
 	    android:layout_width="wrap_content"
@@ -40,6 +40,6 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentLeft="true"
 		android:layout_below="@id/text2"
-		android:visibility="gone"/>
+		android:visibility="invisible"/>
 
-</net.bible.android.view.util.widget.DocumentListItem>
+</net.bible.android.view.activity.download.DocumentDownloadListItem>
